--- a/read/geturl.html
+++ b/read/geturl.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Baca CSV Pilih Kolom + Auto Sort</title>
+<title>Baca CSV Pilih Kolom + Auto Sort + Toggle Menu</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -43,6 +43,7 @@
     cursor: pointer;
   }
   button:hover { background: #0056b3; }
+  .hidden { display: none; }
 </style>
 </head>
 <body>
@@ -51,16 +52,17 @@
 
 <input type="file" id="csvFile" accept=".csv"><br>
 
-<div id="headerList"></div>
+<button id="toggleHeaderList" class="hidden">Tampilkan/Sembunyikan Menu Kolom</button>
+<div id="headerList" class="hidden"></div>
+
 <button id="showDataBtn" style="display:none;">Tampilkan</button>
+<button id="toggleTableBtn" class="hidden">Sembunyikan Hasil</button>
 
 <table id="csvTable"></table>
 
 <script>
 let csvData = [];
 let headers = [];
-
-// kolom default yang otomatis dicentang
 const defaultChecked = ["ID Shop", "ID Barang", "Total Komisi per Produk(Rp)"];
 
 document.getElementById('csvFile').addEventListener('change', function(e) {
@@ -85,10 +87,16 @@ document.getElementById('csvFile').addEventListener('change', function(e) {
       headerDiv.appendChild(document.createElement('br'));
     });
 
+    document.getElementById('toggleHeaderList').classList.remove('hidden');
+    document.getElementById('headerList').classList.remove('hidden');
     document.getElementById('showDataBtn').style.display = 'inline-block';
     document.getElementById('csvTable').innerHTML = '';
   };
   reader.readAsText(file);
+});
+
+document.getElementById('toggleHeaderList').addEventListener('click', () => {
+  document.getElementById('headerList').classList.toggle('hidden');
 });
 
 document.getElementById('showDataBtn').addEventListener('click', function() {
@@ -103,20 +111,17 @@ document.getElementById('showDataBtn').addEventListener('click', function() {
     return;
   }
 
-  // cari index kolom "Total Komisi per Produk(Rp)"
   const komisiIndex = headers.findIndex(h => h.trim() === "Total Komisi per Produk(Rp)");
 
-  // jika kolom komisi ada, urutkan berdasarkan nilainya
   let dataToShow = csvData.slice(1);
   if (komisiIndex !== -1) {
     dataToShow.sort((a, b) => {
-      const valA = parseFloat((a[komisiIndex] || '').replace(/[^\d.-]/g, "")) || 0;
-      const valB = parseFloat((b[komisiIndex] || '').replace(/[^\d.-]/g, "")) || 0;
-      return valB - valA; // descending
+      const valA = parseFloat(a[komisiIndex]?.replace(/[^\d.-]/g, "")) || 0;
+      const valB = parseFloat(b[komisiIndex]?.replace(/[^\d.-]/g, "")) || 0;
+      return valB - valA;
     });
   }
 
-  // buat header tabel
   const headerRow = document.createElement('tr');
   checkedIndexes.forEach(i => {
     const th = document.createElement('th');
@@ -125,7 +130,6 @@ document.getElementById('showDataBtn').addEventListener('click', function() {
   });
   table.appendChild(headerRow);
 
-  // isi tabel hasil sorting
   dataToShow.forEach(row => {
     const tr = document.createElement('tr');
     checkedIndexes.forEach(i => {
@@ -135,6 +139,15 @@ document.getElementById('showDataBtn').addEventListener('click', function() {
     });
     table.appendChild(tr);
   });
+
+  document.getElementById('toggleTableBtn').classList.remove('hidden');
+  document.getElementById('csvTable').classList.remove('hidden');
+});
+
+document.getElementById('toggleTableBtn').addEventListener('click', function() {
+  const table = document.getElementById('csvTable');
+  const isHidden = table.classList.toggle('hidden');
+  this.textContent = isHidden ? 'Tampilkan Hasil' : 'Sembunyikan Hasil';
 });
 </script>
 
